# uuidy

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  prd.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.tasks/: 01-project-setup.json  02-database-layer.json  03-schemas.json  04-cache-service.json  05-search-service.json  06-classifier-service.json  07-api-routes.json  08-integration-testing.json  09-documentation-polish.json  README.md
src/uuid_classifier/: __init__.py  main.py
src/uuid_classifier/api/: __init__.py  dependencies.py  router.py
src/uuid_classifier/core/: __init__.py  config.py
src/uuid_classifier/db/: __init__.py  database.py  models.py
src/uuid_classifier/schemas/: __init__.py  classification.py
src/uuid_classifier/services/: __init__.py  cache_service.py  classifier_service.py  search_service.py
src/uuid_classifier/utils/: __init__.py  ble_patterns.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  mock_serpapi_responses.py  search_responses.json
tests/integration/: conftest.py  test_api.py  test_full_flow.py
tests/unit/: test_cache_service.py  test_classifier_service.py  test_main.py  test_models.py  test_schemas.py  test_search_service.py
